--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,7 +17,11 @@ services:
     command: npm start
 
   mongo:
-    image: "mvertes/alpine-mongo"
+    image: "mongo:6.0.6-jammy"
+    expose:
+      - "27017"
+    ports:
+      - "27017:27017"
 
   redis:
     image: "redis:7.0.11-alpine"
