--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/nodemon/bin/nodemon.js index.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +16,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-redis-cache": "^1.1.3",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.3.0",
+    "mongodb": "^5.3.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
