--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-redis-cache": "^1.1.3",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "string-sanitizer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
