--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
+    "rate-limiter-flexible": "^2.4.1",
     "string-sanitizer": "^2.0.2"
   },
   "devDependencies": {
