--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "rate-limiter-flexible": "^2.4.1",
-    "string-sanitizer": "^2.0.2"
+    "string-sanitizer": "^2.0.2",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
